--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <div class="title-container">
       <img src="assets/img/logo.png" alt="Logo" class="logo" />
       <ion-title>
-        Preparación Ante Riesgo.. adios
+        Preparación Ante Riesgo....nuevo
       </ion-title>
     </div>
     <ion-buttons slot="end">
