--- a/src/app/ayuda/ayuda.page.html
+++ b/src/app/ayuda/ayuda.page.html
@@ -4,6 +4,8 @@
   </ion-toolbar>
 </ion-header>
 
+ay papi 
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
