--- a/src/app/ranking-global/ranking-global.page.html
+++ b/src/app/ranking-global/ranking-global.page.html
@@ -1,13 +1,63 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>RankingGlobal</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
+    </ion-buttons>
+    <ion-title>
+      Preparación Ante Riesgo<br>y Amenazas
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="navigateToInicioSesion()">
+        <img src="assets/img/icono de usuario.png" alt="Usuario" class="icon">
+      </ion-button>
+      <ion-button>
+        <img src="assets/img/icono de ayuda.png" alt="Ayuda" class="icon">
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">RankingGlobal</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="ranking-container">
+    <img src="assets/img/fondo.jpg" class="background-image" />
+    <div class="title-box">
+      <img src="assets/img/logo.png" alt="Logo" class="logo"/>
+      <div class="title-text">
+        <h2>{{ title }}</h2>
+        <h3>{{ subtitle }}</h3>
+      </div>
+    </div>
+    <table class="ranking-table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Nombre</th>
+          <th>Nivel 1</th>
+          <th>Nivel 2</th>
+          <th>Nivel 3</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let player of players; let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>{{ player.name }}</td>
+          <td>{{ player.level1 }}</td>
+          <td>{{ player.level2 }}</td>
+          <td>{{ player.level3 }}</td>
+          <td>{{ player.total }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="footer-bar"></div>
+    <!-- Navegación del carrusel -->
+    <div *ngIf="currentIndex > 0" class="carousel-nav left" (click)="prevSection()">
+      <img src="assets/img/flecha izquierda.png" alt="Anterior" class="nav-icon">
+    </div>
+    <div *ngIf="currentIndex < sections.length - 1" class="carousel-nav right" (click)="nextSection()">
+      <img src="assets/img/flecha derecha.png" alt="Siguiente" class="nav-icon">
+    </div>
+  </div>
 </ion-content>
