--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,16 +1,20 @@
 <ion-header>
   <ion-toolbar>
     <div class="title-container">
-      <img src="assets/img/logo.png" alt="Logo" class="logo" />
+      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()"/>
       <ion-title>
         Preparación Ante Riesgo<br>y Amenazas
       </ion-title>
     </div>
     <ion-buttons slot="end">
-      <ion-button (click)="navigateToInicioSesion()">
+      <ion-button *ngIf="!username" (click)="navigateToInicioSesion()">
         <img src="assets/img/icono de usuario.png" alt="Usuario" class="icon">
       </ion-button>
-      <ion-button>
+      <ion-button *ngIf="username" (click)="logout()">
+        <img src="assets/img/icono de usuario-activo.png" alt="Usuario Activo" class="icon">
+        {{ username }}
+      </ion-button>
+      <ion-button (click)="navigateToRanking()">
         <img src="assets/img/icono de ranking.png" alt="Ranking" class="icon">
       </ion-button>
       <ion-button>
@@ -32,11 +36,11 @@
         <ion-icon slot="start" name="alert-outline"></ion-icon>
         Prevenciones
       </ion-button>      
-      <ion-button expand="block" class="custom-button button2" style="--animation-delay: 0.4s;">
+      <ion-button expand="block" class="custom-button button2" style="--animation-delay: 0.4s;" (click)="navigateToSeleccionJuego()">
         <ion-icon slot="start" name="game-controller-outline"></ion-icon>
         Juego
       </ion-button>
-      <ion-button expand="block" class="custom-button button3" style="--animation-delay: 0.6s;">
+      <ion-button expand="block" class="custom-button button3" style="--animation-delay: 0.6s;" (click)="navigateToOpciones()">
         <ion-icon slot="start" name="settings-outline"></ion-icon>
         Opciones
       </ion-button>
@@ -44,3 +48,4 @@
   </div>
   <div class="footer-bar"></div>
 </ion-content>
+
