--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,44 +2,44 @@
     position: relative;
     width: 100%;
     height: 100%;
-}
-
-.background-image {
+  }
+  
+  .background-image {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: -1;
-}
-
-.characters {
+  }
+  
+  .characters {
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
     justify-content: space-between;
     width: 100%;
     padding: 0 0px;
-}
-
-.character {
-    max-width: 230px;
-    max-height: 700px;
-}
-
-.buttons {
+  }
+  
+  .character {
+    max-width: 20%; /* Ajustado a porcentaje */
+    max-height: 20%; /* Ajustado a porcentaje */
+  }
+  
+  .buttons {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 2%; /* Ajustado a porcentaje */
     width: 80%;
-}
-
-@keyframes slideInLeft {
+  }
+  
+  @keyframes slideInLeft {
     0% {
       transform: translateX(-100%);
       opacity: 0;
@@ -54,11 +54,11 @@
     --border-radius: 20px;
     --background: #fff;
     --color: #000;
-    --padding-start: 5px;
-    --padding-end: 5px;
-    --padding-top: 5px;
-    --padding-bottom: 5px;
-    --inner-padding: 5px;
+    --padding-start: 2%;
+    --padding-end: 2%;
+    --padding-top: 2%;
+    --padding-bottom: 2%;
+    --inner-padding: 2%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     font-size: 1.5rem;
     animation: slideInLeft 1s ease-in-out;
@@ -66,68 +66,73 @@
     animation-fill-mode: both;
   }
   
-
-.button1 {
-    margin-bottom: 40px;
-    margin-left: 40px;
-    margin-right: 500px;
-}
-
-.button2 {
-    margin-bottom: 40px;
-    margin-left: 250px;
-    margin-right: 250px;
-}
-
-.button3 {
-    margin-bottom: 40px;
-    margin-left: 500px;
-    margin-right: 40px;
-}
-
-.footer-bar {
+  .button1 {
+    margin-bottom: 6%;
+    margin-left: 10%;
+    margin-right: 30%;
+  }
+  
+  .button2 {
+    margin-bottom: 6%;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+  
+  .button3 {
+    margin-bottom: 6%;
+    margin-left: 30%;
+    margin-right: 10%;
+  }
+  
+  .button-icon {
+    width: 30%;
+    height: auto;
+    border-radius: 50%; /* Hace la imagen circular */
+  }
+  
+  .footer-bar {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 5%; /* Ajustado a porcentaje */
     background: #000;
-}
+  }
+  
 
 ion-header {
     ion-toolbar {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 20px;
+        padding: 0 0%;
     }
-
+  
     .title-container {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 500px;
         width: 100%;
     }
-
+  
     img.logo {
-        width: 65px;
-        height: 65px;
-        margin-right: -750px;
+        width: 6.5%;
+        height: 6.5%;
+        margin-left: 43%;
     }
-
+  
     ion-title {
-        display: flex;
         text-align: center;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
         font-size: 1.2rem;
         line-height: 1.5;
+        margin-right: 30%;
     }
-
+  
     .icon {
-        width: 30px;
-        height: 30px;
+        width: auto;
     }
-}
+  .icon, .back-icon {
+    width: 30px;
+    height: auto;
+  }
+  }
