--- a/src/app/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/inicio-sesion/inicio-sesion.page.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
+    </ion-buttons>
     <ion-title class="title-container">
       Preparación Ante Riesgo y Amenazas
     </ion-title>
@@ -17,14 +22,14 @@
       <img src="assets/img/logo.png" class="logo-large" />
       <ion-item>
         <ion-label position="floating">Nombre de Usuario</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input [(ngModel)]="username" type="text" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input [(ngModel)]="password" type="password" required></ion-input>
       </ion-item>
-      <ion-button expand="block" class="register-button" color="tertiary">Registrarse</ion-button>
-      <ion-button expand="block" class="login-button">Iniciar Sesión</ion-button>
+      <ion-button expand="block" class="login-button" color="tertiary" (click)="login()">Iniciar Sesión</ion-button>
+      <ion-button expand="block" class="register-button" color="secondary" (click)="navigateToRegistro()">Registrarse</ion-button>
     </div>
   </div>
   <div class="footer-bar"></div>
