--- a/src/app/reconocimiento-potenciales-inundacion/reconocimiento-potenciales-inundacion.page.html
+++ b/src/app/reconocimiento-potenciales-inundacion/reconocimiento-potenciales-inundacion.page.html
@@ -1,13 +1,51 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>ReconocimientoPotencialesInundacion</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
+    </ion-buttons>
+    <div class="title-container">
+      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
+      <ion-title>
+        Preparación Ante Riesgo<br>y Amenazas
+      </ion-title>
+    </div>
+    <ion-buttons slot="end">
+      <ion-button (click)="navigateToInicioSesion()">
+        <img src="assets/img/icono de usuario.png" alt="Usuario" class="icon">
+      </ion-button>
+      <ion-button>
+        <img src="assets/img/icono de ranking.png" alt="Ranking" class="icon">
+      </ion-button>
+      <ion-button>
+        <img src="assets/img/icono de ayuda.png" alt="Ayuda" class="icon">
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ReconocimientoPotencialesInundacion</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="prevencion-inundacion-container">
+    <img src="assets/img/fondo.jpg" class="background-image" />
+    <div class="title-box">
+      <h2>{{title}}</h2>
+    </div>
+    <div class="image-wrapper">
+      <img [src]="imageSrc" alt="{{caption}}" class="main-image" />
+    </div>
+    <div class="image-caption">{{caption}}</div>
+    <p class="description">{{description}}</p>
+    <img src="assets/img/rana fondo.png" alt="Aqua" class="character">
+
+    <!-- Navegación del carrusel -->
+    <div *ngIf="currentIndex > 0" class="carousel-nav left" (click)="prevSection()">
+      <img src="assets/img/flecha izquierda.png" alt="Anterior" class="nav-icon">
+    </div>
+    <div *ngIf="currentIndex < sections.length - 1" class="carousel-nav right" (click)="nextSection()">
+      <img src="assets/img/flecha derecha.png" alt="Siguiente" class="nav-icon">
+    </div>
+  </div>
+  <div class="footer-bar"></div>
 </ion-content>
+
