--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,13 +1,84 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Registro</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="title-container">
+      Preparación Ante Riesgo y Amenazas
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Registro</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="home-container">
+    <img src="assets/img/fondo.jpg" class="background-image" />
+    <div class="characters">
+      <img src="assets/img/aqua rana.png" class="character aqua" />
+      <img src="assets/img/terra armadillo.png" class="character terra" />
+    </div>
+    <div class="login-container">
+      <img src="assets/img/logo.png" class="logo-large" />
+      <div class="input-group">
+        <ion-item>
+          <ion-label position="floating">Nombre</ion-label>
+          <ion-input [(ngModel)]="nombre" type="text"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Apellido</ion-label>
+          <ion-input [(ngModel)]="apellido" type="text"></ion-input>
+        </ion-item>
+      </div>
+      <ion-item>
+        <ion-label position="floating">Nombre de Usuario</ion-label>
+        <ion-input [(ngModel)]="nombreUsuario" type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input [(ngModel)]="contrasena" type="password"></ion-input>
+      </ion-item>
+      <ion-button expand="block" class="register-button" color="tertiary" (click)="registrar()">Registrarse</ion-button>
+    </div>
+  </div>
+  <div class="footer-bar"></div>
+
+  <!-- Alertas y confirmaciones -->
+  <ion-alert
+    [isOpen]="isAlertOpen"
+    onDidDismiss="isAlertOpen = false"
+    header="Error"
+    message="{{ alertMessage }}"
+    buttons="['OK']"
+  ></ion-alert>
+
+  <ion-alert
+    [isOpen]="isConfirmOpen"
+    onDidDismiss="isConfirmOpen = false"
+    header="Confirmación de Registro"
+    message="¿Confirmar registro con los siguientes datos?<br><br>Nombre: {{ nombre }}<br>Apellido: {{ apellido }}<br>Nombre de Usuario: {{ nombreUsuario }}"
+    buttons="[
+      {
+        text: 'No',
+        role: 'cancel',
+        handler: () => {
+          isConfirmOpen = false;
+        }
+      },
+      {
+        text: 'Sí',
+        handler: () => {
+          registrarUsuario();
+        }
+      }
+    ]"
+  ></ion-alert>
+
+  <ion-alert
+    [isOpen]="isSuccessOpen"
+    onDidDismiss="isSuccessOpen = false"
+    header="Registro Exitoso"
+    message="<ion-icon name='checkmark-circle-outline' style='color: green; font-size: 2rem;'></ion-icon><br><br>Registro exitoso"
+    buttons="['OK']"
+  ></ion-alert>
 </ion-content>
