--- a/src/app/seleccion-juego/seleccion-juego.page.html
+++ b/src/app/seleccion-juego/seleccion-juego.page.html
@@ -1,13 +1,44 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>SeleccionJuego</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
+    </ion-buttons>
+    <div class="title-container">
+      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
+      <ion-title>
+        Preparación Ante Riesgo<br>y Amenazas
+      </ion-title>
+    </div>
+    <ion-buttons slot="end">
+      <ion-button (click)="navigateToInicioSesion()">
+        <img src="assets/img/icono de usuario.png" alt="Usuario" class="icon">
+      </ion-button>
+      <ion-button>
+        <img src="assets/img/icono de ranking.png" alt="Ranking" class="icon">
+      </ion-button>
+      <ion-button >
+        <img src="assets/img/icono de ayuda.png" alt="Ayuda" class="icon">
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">SeleccionJuego</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="seleccion-juego-container">
+    <img src="assets/img/fondo-seleccion-juego.png" class="background-image" />
+    <h1>Selección de Juego</h1>
+    <div class="buttons">
+      <ion-button expand="block" class="custom-button button1" (click)="navigateToJuegoInundacion()">
+        <img src="assets/img/agua.png" alt="Inundación" class="button-icon">
+        Situacion ante Inundacion
+      </ion-button>
+      <ion-button expand="block" class="custom-button button2" (click)="navigateToJuegoDeslizamiento()">
+        Situacion ante Deslizamiento de Tierra
+        <img src="assets/img/tierra.png" alt="Deslizamiento" class="button-icon">
+      </ion-button>
+    </div>
+  </div>
+  <div class="footer-bar"></div>
 </ion-content>
