--- a/src/app/seleccion-tema/seleccion-tema.page.scss
+++ b/src/app/seleccion-tema/seleccion-tema.page.scss
@@ -1,123 +1,151 @@
 .seleccion-tema-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-  }
-  
-  .background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
 }
-  
-  h1 {
-    font-size: 2rem;
-    margin-top: 2rem;
-  }
-  
-  .buttons {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 80%;
-  }
-  
-  .custom-button {
-    --border-radius: 20px;
-    --background: #fff;
-    --color: #000;
-    --padding-start: 10px;
-    --padding-end: 10px;
-    --padding-top: 5px;
-    --padding-bottom: 5px;
-    --inner-padding: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    font-size: 1.2rem;
-    display: flex;
-    align-items: center;
-  }
-  
-  .button1 {
-    margin-bottom: 40px;
-  }
-  
-  .button2 {
-    margin-top: 20px;
-  }
-  
-  .button-icon {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-  }
-  
-  .characters {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+h1 {
+  position: relative;
+  font-size: 2rem;
+  margin-top: 2%;
+  z-index: 1;
+  color: #000;
+}
+
+.buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  gap: 2%;
+  width: 80%;
+  z-index: 10; /* Asegúrate de que los botones estén en frente */
+}
+
+.custom-button {
+  --border-radius: 20px;
+  --background: #fff;
+  --color: #000;
+  --padding-start: 2%;
+  --padding-end: 2%;
+  --padding-top: 1%;
+  --padding-bottom: 1%;
+  --inner-padding: 1%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Centra el texto */
+  text-align: center;
+  cursor: pointer; /* Asegúrate de que el cursor cambie a una mano en hover */
+}
+
+.button1 {
+  margin-left: 20%;
+  margin-right: 35%;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+.button2 {
+  margin-left: 35%;
+  margin-right: 20%;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.button-icon {
+  width: 30%;
+  height: 30%;
+  border-radius: 50%;
+  margin: 0 5%;
+}
+
+.characters {
+  position: absolute;
+  top: 5%;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  z-index: 5; /* Asegúrate de que los personajes estén detrás de los botones */
+}
+
+.character {
+  max-width: 90%;
+  max-height: 100%;
+}
+
+.aqua {
+  position: absolute;
+  right: 80%;
+  right: 80%;
+  bottom: 10%;
+}
+
+.terra {
+  position: absolute;
+  left: 90%;
+  top: 10%;
+  bottom: 0%;
+}
+
+.footer-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  background: #000;
+  z-index: 10; /* Asegúrate de que los botones estén en frente */
+}
+
+ion-header {
+  ion-toolbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 0%;
+  }
+
+  .title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    padding: 0 50px;
   }
-  
-  .character {
-    max-width: 230px;
-    max-height: 700px;
+
+  img.logo {
+    width: 6.5%;
+    height: 6.5%;
+    margin-left: 43%;
   }
-  
-  .footer-bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background: #000;
+
+  ion-title {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-right: 30%;
   }
-  
-  ion-header {
-    ion-toolbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
-    }
-  
-    .title-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: 500px;
-      width: 100%;
-    }
-  
-    img.logo {
-      width: 65px;
-      height: 65px;
-      margin-right: -750px;
-    }
-  
-    ion-title {
-      display: flex;
-      text-align: center;
-      align-items: center;
-      justify-content: center;
-      margin: 0;
-      font-size: 1.2rem;
-      line-height: 1.5;
-    }
-  
-    .icon {
-      width: 30px;
-      height: 30px;
-    }
+
+  .icon, .back-icon {
+    width: 30px;
+    height: auto;
   }
-  
+}
