--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <div class="title-container">
       <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()"/>
       <ion-title>
@@ -48,4 +48,3 @@
   </div>
   <div class="footer-bar"></div>
 </ion-content>
-
