--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,138 +1,143 @@
 .home-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.background-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.characters {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 0px;
+}
+
+.character {
+  max-width: 20%; /* Ajustado a porcentaje */
+  max-height: 20%; /* Ajustado a porcentaje */
+}
+
+.buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  gap: 2%; /* Ajustado a porcentaje */
+  width: 80%;
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
   }
-  
-  .background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
-  
-  .characters {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0 0px;
-  }
-  
-  .character {
-    max-width: 20%; /* Ajustado a porcentaje */
-    max-height: 20%; /* Ajustado a porcentaje */
-  }
-  
-  .buttons {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    gap: 2%; /* Ajustado a porcentaje */
-    width: 80%;
-  }
-  
-  @keyframes slideInLeft {
-    0% {
-      transform: translateX(-100%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-  
-  .custom-button {
-    --border-radius: 20px;
-    --background: #fff;
-    --color: #000;
-    --padding-start: 2%;
-    --padding-end: 2%;
-    --padding-top: 2%;
-    --padding-bottom: 2%;
-    --inner-padding: 2%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    font-size: 1.5rem;
-    animation: slideInLeft 1s ease-in-out;
-    animation-delay: var(--animation-delay);
-    animation-fill-mode: both;
-  }
-  
-  .button1 {
-    margin-bottom: 6%;
-    margin-left: 10%;
-    margin-right: 30%;
-  }
-  
-  .button2 {
-    margin-bottom: 6%;
-    margin-left: 20%;
-    margin-right: 20%;
-  }
-  
-  .button3 {
-    margin-bottom: 6%;
-    margin-left: 30%;
-    margin-right: 10%;
-  }
-  
-  .button-icon {
-    width: 30%;
-    height: auto;
-    border-radius: 50%; /* Hace la imagen circular */
-  }
-  
-  .footer-bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 5%; /* Ajustado a porcentaje */
-    background: #000;
-  }
-  
+}
+
+.custom-button {
+  --border-radius: 20px;
+  --background: #fff;
+  --color: #000;
+  --padding-start: 2%;
+  --padding-end: 2%;
+  --padding-top: 2%;
+  --padding-bottom: 2%;
+  --inner-padding: 2%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  font-size: 1.5rem;
+  animation: slideInLeft 1s ease-in-out;
+  animation-delay: var(--animation-delay);
+  animation-fill-mode: both;
+}
+
+.button1 {
+  margin-bottom: 6%;
+  margin-left: 10%;
+  margin-right: 30%;
+}
+
+.button2 {
+  margin-bottom: 6%;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.button3 {
+  margin-bottom: 6%;
+  margin-left: 30%;
+  margin-right: 10%;
+}
+
+.button-icon {
+  width: 30%;
+  height: auto;
+  border-radius: 50%; /* Hace la imagen circular */
+}
+
+.footer-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5%; /* Ajustado a porcentaje */
+  background: #000;
+}
 
 ion-header {
-    ion-toolbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 0%;
-    }
+  ion-toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0%;
+  }
+
+  .title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  img.logo {
+    width: 6.5%;
+    height: 6.5%;
+    margin-left: 43%;
+  }
+
+  ion-title {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-right: 30%;
+  }
+
+  .icon {
+    width: auto;
+  }
   
-    .title-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-    }
-  
-    img.logo {
-        width: 6.5%;
-        height: 6.5%;
-        margin-left: 43%;
-    }
-  
-    ion-title {
-        text-align: center;
-        font-size: 1.2rem;
-        line-height: 1.5;
-        margin-right: 30%;
-    }
-  
-    .icon {
-        width: auto;
-    }
   .icon, .back-icon {
     width: 30px;
     height: auto;
   }
-  }
+}
+
+.black-toolbar {
+  --background: #000 !important;
+  --color: #fff !important; /* Opcional, para el color del texto */
+}
