--- a/src/app/opciones/opciones.page.html
+++ b/src/app/opciones/opciones.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
@@ -51,3 +51,4 @@
 <ion-footer>
   <div class="footer-bar"></div>
 </ion-footer>
+
