--- a/src/app/ayuda/ayuda.page.html
+++ b/src/app/ayuda/ayuda.page.html
@@ -1,15 +1,70 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Ayuda</ion-title>
+    <ion-title>Preparación Ante Riesgo y Amenazas</ion-title>
   </ion-toolbar>
 </ion-header>
 
-ay papi 
+<ion-content class="ion-padding">
+  <!-- Contenedor para el logo y los textos -->
+  <div class="logo-container">
+    <img src="/assets/img/logo.png" alt="Logo" class="logo">
+    <div class="text-container">
+      <div class="text-help">Ayuda</div>
+      <div class="text-faq">Preguntas Frecuentes</div>
+    </div>
+    <!-- Nuevo contenedor para la imagen del operador y los textos -->
+    <div class="operator-container">
+      <img src="/assets/img/operator.png" alt="Operator" class="operator-image">
+      <div class="operator-texts">
+        <div class="operator-question">¿No encontró lo que necesita?</div>
+        <div class="operator-contact">
+          Consulte al siguiente correo electrónico:<br>
+          <a href="mailto:carlos.rivera5&#64;utp.ac.pa">carlos.rivera5&#64;utp.ac.pa</a><br><br>
+          O contáctenos al siguiente número:<br>
+          <a href="tel:+68341357">6834-1357</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Ayuda</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- Contenedor para la búsqueda y el orderlist -->
+  <div class="main-container">
+    <div class="empty-box"></div>
+    <div class="content-box">
+      <div class="search-container-wrapper">
+        <div class="search-box">
+          <ion-input 
+            placeholder="Buscar..." 
+            type="text" 
+            (ionInput)="searchQuestions($event)" 
+            clearInput>
+          </ion-input>
+        </div>
+      </div>
+
+      <div class="questions-container">
+        <ul class="questions-list">
+          <li *ngFor="let question of filteredQuestions" class="question-wrapper">
+            <div class="question-item">
+              <div class="question-header">
+                <span>{{ question.text }}</span>
+                <ion-button (click)="toggleDetails(question)" [ngClass]="{'show-button': !question.showDetails, 'hide-button': question.showDetails}" fill="outline" size="small">
+                  {{ question.showDetails ? 'Ocultar' : 'Mostrar' }}
+                </ion-button>
+              </div>
+              <div *ngIf="question.showDetails" class="question-details">
+                {{ question.details }}
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
