--- a/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.html
+++ b/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.html
@@ -1,13 +1,68 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Nivel1Deslizamiento</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
+    </ion-buttons>
+    <div class="title-container">
+      <div class="logo-title-box">
+        <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
+        <ion-title>
+          Preparación Ante Riesgo<br>y Amenazas
+        </ion-title>
+      </div>
+    </div>
+    <ion-buttons slot="end">
+      <ion-button (click)="navigateToInicioSesion()">
+        <img src="assets/img/icono de usuario.png" alt="Usuario" class="icon">
+      </ion-button>
+      <ion-button>
+        <img src="assets/img/icono de ranking.png" alt="Ranking" class="icon">
+      </ion-button>
+      <ion-button>
+        <img src="assets/img/icono de ayuda.png" alt="Ayuda" class="icon">
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Nivel1Deslizamiento</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <img src="assets/img/fondo.jpg" class="background-image" />
+  <p class="centered-text">Tu texto aquí</p>
+  <div class="section section-1">
+    
+    <img src="assets/img/your-image.png" alt="Centered Image" class="centered-image">
+  </div>
+  <div class="section section-2">
+    <p class="centered-text">Pregunta sobre la imagen</p>
+    
+  </div>
+  <div class="section section-3">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block">Respuesta 1</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button expand="block">Respuesta 2</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block">Respuesta 3</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button expand="block">Respuesta 4</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
+
