--- a/src/global.scss
+++ b/src/global.scss
@@ -1,15 +1,8 @@
-/* src/global.scss */
-
-/* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
-
-/* Basic CSS for apps built with Ionic */
 @import "@ionic/angular/css/normalize.css";
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/typography.css";
 @import "@ionic/angular/css/display.css";
-
-/* Optional CSS utils that can be commented out */
 @import "@ionic/angular/css/padding.css";
 @import "@ionic/angular/css/float-elements.css";
 @import "@ionic/angular/css/text-alignment.css";
@@ -191,5 +184,5 @@ ion-header {
 /* Estilos para toolbar negro */
 .black-toolbar {
   --background: #000 !important;
-  --color: #fff !important; /* Opcional, para el color del texto */
+  --color: #fff !important;
 }
