--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
       <ion-button (click)="navigateToRanking()">
         <img src="assets/img/icono de ranking.png" alt="Ranking" class="icon">
       </ion-button>
-      <ion-button>
+      <ion-button (click)="navigateToAyuda()">
         <img src="assets/img/icono de ayuda.png" alt="Ayuda" class="icon">
       </ion-button>
     </ion-buttons>
