--- a/src/app/juego-inundacion/juego-inundacion.page.html
+++ b/src/app/juego-inundacion/juego-inundacion.page.html
@@ -34,32 +34,32 @@
     </div>
     <div class="level-box">
       <div class="level-grid">
-        <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+        <ion-button class="level-button" (click)="navigateToJuegoInundacion(1)">
+          <img src="assets/img/lv-1-w.png" />
+        </ion-button>
+        <ion-button class="level-button" (click)="navigateToJuegoInundacion(2)">
+          <img src="assets/img/lv-2-w.png" />
+        </ion-button>
+        <ion-button class="level-button" (click)="navigateToJuegoInundacion(3)">
+          <img src="assets/img/lv-3-w.png" />
         </ion-button>
         <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+          <img src="assets/img/lv-blq-w.png" />
         </ion-button>
         <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+          <img src="assets/img/lv-blq-w.png" />
         </ion-button>
         <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+          <img src="assets/img/lv-blq-w.png" />
         </ion-button>
         <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+          <img src="assets/img/lv-blq-w.png" />
         </ion-button>
         <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+          <img src="assets/img/lv-blq-w.png" />
         </ion-button>
         <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
-        </ion-button>
-        <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
-        </ion-button>
-        <ion-button class="level-button">
-          <img src="assets/img/icono de ayuda.png" class="level-icon"/>
+          <img src="assets/img/lv-blq-w.png" />
         </ion-button>
       </div>
     </div>
