--- a/src/app/juego-inundacion/juego-inundacion.page.scss
+++ b/src/app/juego-inundacion/juego-inundacion.page.scss
@@ -4,7 +4,6 @@ html, body, ion-content {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: black;
 }
 
 .background-image {
@@ -14,7 +13,7 @@ html, body, ion-content {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 5;
+  z-index: -1;
 }
 
 ion-header {
@@ -76,7 +75,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  z-index: 5;
+  z-index: 5; /* Asegúrate de que los personajes estén detrás de los botones */
 }
 
 .character {
@@ -92,19 +91,19 @@ h1 {
 
 .level-box {
   position: relative;
-  border: 2px solid #000;
+  border: 2px solid #000; /* Borde negro intenso */
   border-radius: 15px;
   padding: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  background-color: transparent !important;
-  width: 60%;
-  max-width: 600px;
+  background-color: rgba(202, 202, 202, 0.3); /* Gris claro con transparencia */
+  width: 60%; /* Ancho de la caja */
+  max-width: 600px; /* Máximo ancho de la caja */
   max-height: 600px;
   text-align: center;
-  margin: 0 auto;
+  margin: 0 auto; /* Centrar horizontalmente */
   z-index: 10;
 }
 
@@ -112,13 +111,12 @@ h1 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
-  background-color: transparent;
 }
 
 .level-button {
-  background-color: transparent !important;
-  border: none !important;
-  padding: 0 !important;
+  background-color: transparent !important; /* Fondo transparente */
+  border: none !important; /* Elimina el borde */
+  padding: 0 !important; /* Elimina cualquier padding */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,19 +125,18 @@ h1 {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.level-icon {
-  width: 80%;
-  height: 80%;
-  border-radius: 50%;
+.level-button img {
+  width: 100%; /* Ajusta el tamaño de las imágenes */
+  height: 100%; /* Ajusta el tamaño de las imágenes */
+  background-color: transparent !important; /* Asegura que la imagen de fondo sea transparente */
 }
 
 .level-button:hover {
-  transform: scale(1.1);
-  box-shadow: 0 0 10px rgb(0, 0, 0);
+  transform: scale(1.1); /* Agrandamiento al pasar el cursor */
+  box-shadow: 0 0 10px rgba(0, 255, 255, 0.5); /* Brillo verde agua */
 }
 
 .back-icon {
   width: 30px;
   height: auto;
 }
-
