--- a/src/app/opciones/opciones.page.scss
+++ b/src/app/opciones/opciones.page.scss
@@ -53,8 +53,8 @@ ion-content {
   }
   
   .logo {
-    width: 50px;
-    height: 50px;
+    width: 30%;
+    height: 30%;
     margin-right: 1rem;
   }
   
@@ -85,6 +85,35 @@ ion-content {
     text-align: center;
     padding: 0;
   }
-
  
+
+  .item-with-range {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .item-with-range ion-label {
+    flex: 1;
+  }
+  
+  .item-with-range ion-toggle {
+    flex: 0;
+    margin-right: 1rem;
+  }
+  
+  .range-container {
+    flex: 2;
+    width: 400%; /* Ajusta el ancho deseado */
+  }
+
+  ion-range {
+    --bar-background: #000000; /* Color de fondo de la barra */
+    --bar-background-active: #206eff; /* Color de fondo activo */
+    --bar-height: 3px; /* Altura de la barra */
+    --handle-background: #000000; /* Color del mango */
+    --handle-size: 12px; /* Tamaño del mango */
+    width: 100%; /* Ancho de la barra */
+    margin: 0 0.5rem; /* Margen alrededor de la barra */
+  }
   
