--- a/src/app/opciones/opciones.page.html
+++ b/src/app/opciones/opciones.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-button (click)="goBack()">
+        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+      </ion-button>
     </ion-buttons>
     <ion-title>Preparación Ante Riesgo y Amenazas</ion-title>
   </ion-toolbar>
@@ -37,10 +39,7 @@
           <ion-label>Notificaciones</ion-label>
           <ion-toggle slot="end" [(ngModel)]="settings.notifications" (ionChange)="onSettingChange()"></ion-toggle>
         </ion-item>
-        <ion-item lines="none">
-          <ion-label>Modo oscuro</ion-label>
-          <ion-toggle slot="end" [(ngModel)]="settings.darkMode" (ionChange)="onSettingChange()"></ion-toggle>
-        </ion-item>
+        
         <ion-button expand="full" class="account-settings" (click)="openAccountSettings()">Configuración de cuenta</ion-button>
       </ion-card-content>
     </ion-card>
