--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
         <img src="assets/img/icono de usuario.png" alt="Usuario" class="icon">
       </ion-button>
       <ion-button *ngIf="username" (click)="logout()">
-        <img src="assets/img/icono de usuario-activo.png" alt="Usuario Activo" class="icon">
+        <img src="assets/img/avatar.png" alt="Usuario Activo" class="icon">
         {{ username }}
       </ion-button>
       <ion-button (click)="navigateToRanking()">
